// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowHeader component should render correctly when there are no steps 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-height-wy61xf r-paddingBottom-kzbkwu r-paddingTop-fd4yh7 r-width-13qz1uu"
  dir={null}
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    style={
      Object {
        "color": "rgba(4,20,47,1.00)",
        "fontFamily": "Roboto-Medium",
        "fontSize": "20px",
        "lineHeight": "28px",
      }
    }
  >
    Workflow
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    style={
      Object {
        "height": "28px",
        "justifyContent": "flex-end",
        "marginLeft": "16px",
      }
    }
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        Object {
          "color": "rgba(78,93,120,1.00)",
          "fontFamily": "Roboto-Regular",
          "fontSize": "12px",
          "letterSpacing": "0.48px",
          "lineHeight": "20px",
        }
      }
    >
      No steps yet
    </div>
  </div>
</div>
`;

exports[`WorkflowHeader component should render correctly when there are two steps 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-height-wy61xf r-paddingBottom-kzbkwu r-paddingTop-fd4yh7 r-width-13qz1uu"
  dir={null}
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    style={
      Object {
        "color": "rgba(4,20,47,1.00)",
        "fontFamily": "Roboto-Medium",
        "fontSize": "20px",
        "lineHeight": "28px",
      }
    }
  >
    Workflow
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    style={
      Object {
        "height": "28px",
        "justifyContent": "flex-end",
        "marginLeft": "16px",
      }
    }
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        Object {
          "color": "rgba(78,93,120,1.00)",
          "fontFamily": "Roboto-Regular",
          "fontSize": "12px",
          "letterSpacing": "0.48px",
          "lineHeight": "20px",
        }
      }
    >
      2 steps
    </div>
  </div>
</div>
`;

exports[`WorkflowHeader component should render correctly when there is one step 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-height-wy61xf r-paddingBottom-kzbkwu r-paddingTop-fd4yh7 r-width-13qz1uu"
  dir={null}
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    style={
      Object {
        "color": "rgba(4,20,47,1.00)",
        "fontFamily": "Roboto-Medium",
        "fontSize": "20px",
        "lineHeight": "28px",
      }
    }
  >
    Workflow
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    style={
      Object {
        "height": "28px",
        "justifyContent": "flex-end",
        "marginLeft": "16px",
      }
    }
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        Object {
          "color": "rgba(78,93,120,1.00)",
          "fontFamily": "Roboto-Regular",
          "fontSize": "12px",
          "letterSpacing": "0.48px",
          "lineHeight": "20px",
        }
      }
    >
      1 step
    </div>
  </div>
</div>
`;
